--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,10 +41,12 @@ dependencies:
  
 
 dev_dependencies:
+  build_runner: ^2.4.11
   flutter_lints: ^3.0.0
   hive_generator: ^2.0.1
   flutter_test:
     sdk: flutter
+  
     
 
   # The "flutter_lints" package below contains a set of recommended lints to
